--- a/.github/workflows/node.js-ci.yml
+++ b/.github/workflows/node.js-ci.yml
@@ -5,9 +5,9 @@ name: Hyas CI
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
 
 jobs:
   build:
@@ -31,18 +31,18 @@ jobs:
       with:
         hugo-version: 'latest'
         extended: true
-    
+
     - name: Check install Hugo
       run: hugo version
 
     - name: Install dependencies
       run: npm ci
-    
+
     - name: Check for linting errors
       run: npm test
-    
+
     - name: Delete temporary directories
       run: npm run clean
-    
+
     - name: Build production website
       run: npm run build
