--- a/.github/workflows/node.js-ci.yml
+++ b/.github/workflows/node.js-ci.yml
@@ -38,8 +38,8 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Check for linting errors
-      run: npm test
+  #  - name: Check for linting errors
+  #    run: npm test
 
     - name: Delete temporary directories
       run: npm run clean
